# hellodb

./: Cargo.toml  README.md
src/: lib.rs
src/blocks/: mod.rs  source.rs
src/columns/: data.rs  header.rs  mod.rs
src/db/: mod.rs  table.rs
src/execute/: constructor.rs  mod.rs
src/execute/constructor/: expr.rs  mod.rs
src/execute/steps/: aggr.rs  mod.rs  processor.rs
src/functions/: mod.rs
src/functions/aggregate/: mod.rs  simple.rs
src/functions/regular/: arithmetic.rs  boolean.rs  cmp.rs  mod.rs
src/io/: mod.rs  serialize.rs
src/io/column/: mod.rs  serialize.rs
src/io/column/native/: mod.rs
src/io/db/: mod.rs
src/test_misc/: mod.rs
src/tuple/: mod.rs
src/types/: mod.rs  types.rs
