[package]
name = "hellodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4 = "1.23.1"
lz4-sys = "1.9.2"
cli-table = "0.4"
itertools = "0.10.2"
rand = "0.8.4"
rustyline = "9.1.0"
sqlparser = "0.12"